--- a/src/app/main-content/main/main.component.html
+++ b/src/app/main-content/main/main.component.html
@@ -1,4 +1,12 @@
-<section>
+<section style="position: relative;">
     <app-logged-header></app-logged-header>
     <app-slider-comp></app-slider-comp>
+    <div *ngIf="this.globals.isProfileOpen()" class="profile-overlay">
+        <div class="overlay-container">
+            <app-profile></app-profile>
+        </div>
+    </div>
+    <div *ngIf="this.globals.isVidOpen()" class="video-overlay">
+        <div></div>
+    </div>
 </section>
