--- a/src/app/main-content/main/main.component.scss
+++ b/src/app/main-content/main/main.component.scss
@@ -21,4 +21,25 @@ section {
         width: 100%;
         margin-top: 120px;
     }
+
+    > .profile-overlay {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        right: 0;
+        left: 0;
+        background-color: red;
+        @include dFlex(row, center, flex-start);
+        padding-top: 124px;
+        > .overlay-container {
+            height: 400px;
+            width: 300px;
+            background-color: white;
+            border-radius: 6px;
+            box-shadow: 15px 10px 10px -10px rgba(0, 0, 0, 0.5),
+                        -15px 10px 10px -10px rgba(0, 0, 0, 0.5);
+            padding: 6px;
+        }
+    }
+
 }
