--- a/src/app/main-content/profile/profile.component.html
+++ b/src/app/main-content/profile/profile.component.html
@@ -1,1 +1,10 @@
-<p>profile works!</p>
+<section class="profile">
+    <div>
+        <span>Vorname</span>
+
+    </div>
+    <div>
+        <span>Nachname</span>
+    </div>
+    
+</section>
